digiDesignerCounter.cydsn/REBUILD.log
--------------- Rebuild Started: 08/20/2019 21:48:35 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:34:33: warning: left-hand operand of comma expression has no effect [-Wunused-value]
             for(int x = 0; x < 8, x++)
                                 ^
main.c:34:38: error: expected ';' before ')' token
             for(int x = 0; x < 8, x++)
                                      ^
main.c:38:21: warning: statement with no effect [-Wunused-value]
                     cntr_array[x]_Write(1);
                     ^
main.c:38:34: error: expected ';' before '_Write'
                     cntr_array[x]_Write(1);
                                  ^
main.c:43:23: warning: statement with no effect [-Wunused-value]
                       cntr_array[x]_Write(0);
                       ^
main.c:43:36: error: expected ';' before '_Write'
                       cntr_array[x]_Write(0);
                                    ^
main.c:22:13: warning: variable 'inputs' set but not used [-Wunused-but-set-variable]
         int inputs[8];
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 08/20/2019 21:48:35 ---------------
